attempts to fix the opacity flickering on the bg

--- a/src/scss/custom/_pass.scss
+++ b/src/scss/custom/_pass.scss
@@ -143,6 +143,7 @@
     .pass-bg-img {
         height: 100%;
         min-width: 100%;
+        will-change: opacity;
         object-fit: cover;
     }
 }
